Atualização de pagina inicial, financeiro e relacionamentos

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,9 @@
 <app-navegacao></app-navegacao>
-<router-outlet></router-outlet>
+
+<main role="main">
+    <router-outlet></router-outlet>
+</main>
+
 
 <p-toast key="msg" position="top-right" [baseZIndex]="9999"></p-toast>
 
