--- a/src/app/clientes/pessoa/pessoa.component.html
+++ b/src/app/clientes/pessoa/pessoa.component.html
@@ -4,7 +4,7 @@
   <div class="p-grid">
 
     <div class="p-col-12">
-      <H1>Controle de Clientes</H1>
+      <H1>Relacionamentos</H1>
     </div>
 
     <div class="p-col-12 p-fluid">
@@ -14,7 +14,10 @@
     </div>
 
     <div class="p-col-12">
-      <button pButton type="submit" label="Pesquisar"></button>
+      <a pButton type="submit" label="Pesquisar"></a>
+
+      <a pButton  (click)="cadastro()" 
+        label="NOVO RELACIONAMENTO" ></a>
     </div>
      <br>
   </div>
