--- a/src/app/core/navegacao/navegacao.component.html
+++ b/src/app/core/navegacao/navegacao.component.html
@@ -1,43 +1,32 @@
 
 <nav class="navbar">
 
-
- 
-  
-
     <div class="container">
 
-     
       <div class="p-grid">
         <div class="p-col-12">
           <a href="javascript:;"  (click)="exibindoMenu = !exibindoMenu"
           class="navbar-toggle"><i class="pi pi-bars"></i></a>
-
-          
         </div>
       </div>
-  
       
     </div>
 
     <ul class="navbar-menu" [hidden]="!exibindoMenu">
       <img src="../../assets/logoBranco.png"  href="#" class="navbar-menuitem"  layout-align="center" style="width: 105px; Height: 105px "  flex="70">
       <br> 
-       <!-- <li class="navbar-usuario">Hugo França</li> -->   
-       <!-- <li ><a >Home</a></li> -->
+ 
       
         <!-- Pendências = lancamentos -->
         <li class="navbar-menuitem"><a (click)="home()">Página inical</a></li>
-        <li class="navbar-menuitem"><a (click)="pendenciaLista()">Pendências</a></li>
-        <li class="navbar-menuitem"><a (click)="pendenciaCadastro()">Nova pendência</a></li>
-        <li class="navbar-menuitem"><a (click)="clienteLista()">Clientes</a></li>
-        <li class="navbar-menuitem"><a (click)="clienteCadastro()">Novo cliente</a></li>
+        <li class="navbar-menuitem"><a (click)="pendenciaLista()">Financeiro</a></li>
+        <!-- <li class="navbar-menuitem"><a (click)="pendenciaCadastro()">Nova pendência</a></li> -->
+        <li class="navbar-menuitem"><a (click)="clienteLista()">Relacionamento</a></li>
+        <!-- <li class="navbar-menuitem"><a (click)="clienteCadastro()">Novo cliente</a></li>
         <li class="navbar-menuitem"><a (click)="controleVenda()">Controle de vendas</a></li>
-        <li class="navbar-menuitem"><a (click)="novaVenda()">Nova venda</a></li>
-        <li class="navbar-menuitem"><a href="#">Fornecedores</a></li>
-        <li class="navbar-menuitem"><a href="#">Novo fornecedor</a></li>
-        <!-- <li class="navbar-menuitem"><a href="#">Relatórios</a></li> -->
-        <!-- <li class="navbar-menuitem"><a href="#">Configurações</a></li> -->
+        <li class="navbar-menuitem"><a (click)="novaVenda()">Nova venda</a></li> -->
+        <!-- <li class="navbar-menuitem"><a href="#">Fornecedores</a></li>
+        <li class="navbar-menuitem"><a href="#">Novo fornecedor</a></li> -->
         <li class="navbar-menuitem"><a href="#">Sair</a></li>
       </ul>
   
