--- a/src/app/lancamentos/lancamento/lancamentos.component.html
+++ b/src/app/lancamentos/lancamento/lancamentos.component.html
@@ -1,23 +1,23 @@
 
  
-<div class="container">
+<div class="containerHome">
     <form autocomplete="off" (ngSubmit)="pesquisar()">
 
   
 <div class="p-grid">
    
     <div class="p-col-12">
-        <H1>Controle de Pendências</H1>
+        <H1>Lançamentos financeiros</H1>
     </div>
 
     <!-- fluid: ocupar a class -->
-    <div class="p-col-12 p-fluid"> 
+    <div class="p-col-6 p-fluid"> 
         <label>Descrição: </label>
         <input  pInputText type="text" name="descricao" 
         [(ngModel)]="filtro.descricao"/>
     </div>
 
-    <div class="p-col-12">
+    <div class="p-col-6">
         <label style="display: block">Vencimento: </label>
         <p-calendar dateFormat="dd/mm/yy" [inputStyle]="{ width: '150px' }"
             name="vencimentoInicio" [(ngModel)]="filtro.dataVencimentoInicio"></p-calendar>
@@ -30,7 +30,8 @@
     <div class="p-col-12">
         <button pButton type="submit" label="PESQUISAR"></button>
   
-        <button pButton type="submit" label="NOVA PENDÊNCIA" class="p-button-info"></button>
+        <button pButton  (click)="cadastro()" 
+        label="NOVO LANÇAMENTO" ></button>
     </div>
         
      
