--- a/src/app/vendas/controle-vendas/controle-vendas.component.html
+++ b/src/app/vendas/controle-vendas/controle-vendas.component.html
@@ -1,86 +1,95 @@
 <div class="container">
-    <H1>Controle  de vendas</H1>
 
+  <form autocomplete="off" (ngSubmit)="pesquisar()">
 
-<div class="p-col-12 p-fluid">
-    <label>Venda: </label>
-    <input type="text" pInputText />
-  </div>
-
-  <div class="p-col-6 p-md-3 p-fluid">
-    <label>Data</label>
-    <p-calendar dateFormat="dd/mm/yy"
-    href="javascript:;" tooltipPosition="top"
-     [inline]="false" [readonlyInput]="false" [showIcon]="false">
-    </p-calendar>
-</div>
-
-
-  <div class="p-col-12">
-    <button pButton type="submit" label="Pesquisar"></button>
-  </div> <br>
-
-  
-
-
-  <p-card>
+    <H1>Controle de vendas</H1>
+    <!-- *ngIf="lancamento.categoria.codigo === 26" -->
+   
 
 
     <div class="p-grid">
-      <div class="p-col-12">
-        <p-table [value]="vendas" [paginator]="true" [rows]="2">
-          <ng-template pTemplate="header">
-            <tr>
-              <th>Codigo</th>
-              <th>Cliente</th>
-              <th>Data Cadastro</th>
-              <th>Total</th>
-              <th class="col-acoes-header"></th>
-            </tr>
-          </ng-template>
-
-          <ng-template pTemplate="body" let-venda>
-            <tr>
-              <td>
-                {{ venda.id }}
-              </td>
-              <td>
-                {{ venda.cliente }}
-              </td>
-              <td>
-                {{ venda.Data }}
-              </td>
-              <td>
-                {{ venda.total }}
-              </td>
-             
-              <td class="col-acoes">
-                <span class="p-column-title"></span>
-                <a pButton icon="pi pi-pencil" pTooltip="Editar" tooltipPosition="top"></a>
-                <button pButton icon="pi pi-trash" pTooltip="Excluir" tooltipPosition="top"></button>
-              </td>
-            </tr>
-          </ng-template>
-
-          <ng-template pTemplate="emptymessage">
-            <tr>
-              <td colspan="5">
-                <h2>Nenhuma pessoa encontrada</h2>
-              </td>
-            </tr>
-          </ng-template>
-
-        </p-table>
-
-        
+      
+      <div class="p-col-12 p-fluid">
+      
+        <label>Venda: </label>
+        <input pInputText type="text" name="descricao" [(ngModel)]="filtro.descricao" />
       </div>
 
       <div class="p-col-12">
-        <button pButton type="submit" label="NOVA VENDA"></button>
+        <label style="display: block">Vencimento: </label>
+        <p-calendar dateFormat="dd/mm/yy" [inputStyle]="{ width: '150px' }"
+            name="vencimentoInicio" [(ngModel)]="filtro.dataVencimentoInicio"></p-calendar>
   
-        <button pButton type="submit" label="RELATÓRIOS" class="p-button-info"></button>
+        <label> até </label>
+        <p-calendar dateFormat="dd/mm/yy" [inputStyle]="{ width: '150px' }"
+        name="vencimentoFim" [(ngModel)]="filtro.dataVencimentoFim"></p-calendar>
     </div>
-    </div>
-  </p-card>
 
+      <div class="p-col-12">
+        <button pButton type="submit" label="PESQUISAR"></button>
+
+        <button pButton type="submit" label="NOVA PENDÊNCIA" class="p-button-info"></button>
+      </div>
+
+    </div>
+
+  </form>
+
+  <br>
+
+
+  <div class="p-grid">
+    <div class="p-col-12">
+     
+        <p-table  [value]="lancamentos" [paginator]="true" [rows]="3"
+        [responsive]="true" #tabela>
+
+        <ng-template pTemplate="caption">
+            <div class="p-d-flex">
+              
+                <button type="button" pButton pRipple icon="pi pi-file-excel"  class="p-button-success p-mr-2"  pTooltip="XLS" tooltipPosition="bottom"></button>
+                <button type="button" pButton pRipple icon="pi pi-file-pdf" class="p-button-warning p-mr-2" pTooltip="PDF" tooltipPosition="bottom"></button>
+
+            </div>
+        </ng-template>
+            <ng-template pTemplate="header">
+                <tr>
+                    <th>Pessoa</th>
+                    <th>Descrição</th>
+                    <th class="col-data-header">Vencimento</th>
+                    <th class="col-data-header">Pagamento</th>
+                    <th class="col-valor-header">Valor</th>
+                    <th class="col-acoes-header"></th>
+                </tr>
+            </ng-template>
+            <ng-template pTemplate="body" let-lancamento >
+                <!-- *ngIf="lancamento.categoria.codigo === 26" -->
+                <tr *ngIf="lancamento.categoria.codigo === 23"  >
+                    <td>{{ lancamento.pessoa.nome }}</td>
+                    <td>{{ lancamento.descricao }}</td>
+                    <td class="col-data-content">{{ lancamento.dataVencimento }}</td>
+                    <td class="col-data-content">{{ lancamento.dataPagamento }}</td>
+                    <td class="col-valor" [style.color]="lancamento.tipo === 'DESPESA' ? 'red' : 'blue'">{{ lancamento.valor }}</td>
+                    <td class="col-acoes">
+                        <button pButton icon="pi pi-pencil"  pTooltip="Editar" tooltipPosition="top"
+                        (click)="pendenciaCadastro(lancamento.codigo)"
+                        ></button>
+                        <button pButton icon="pi pi-trash"  pTooltip="Excluir" tooltipPosition="top"
+                        (click)="confirmarExclusao(lancamento)"></button>
+                    </td>
+                </tr>
+            </ng-template>
+
+            <ng-template pTemplate="emptymessage">
+                <tr>
+                  <td colspan="5">
+                 <h2>Nenhuma pendência encontrada</h2>   
+                  </td>
+                </tr>
+              </ng-template>
+        </p-table>
+     
+    </div>
 </div>
+ 
+  <div>
