--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,6 +2,7 @@ body {
   margin: 0;
   font-family: Arial, Helvetica, sans-serif;
   color: #404C51;
+  
 }
 
 label {
@@ -12,6 +13,15 @@ label {
   .container {
     width: 1170px;
     margin: 0 auto;
+  }
+  .containerHome{
+    width: 1000px;
+    margin: 0 auto;
+    
+  }
+  .containerHomeVendas{
+    width: 90px;
+    //margin: 0 auto;
   }
 }
 
