Atualizações visual, criação de pages de empresa e add svg da nega

--- a/src/app/clientes/pessoa/pessoa.component.html
+++ b/src/app/clientes/pessoa/pessoa.component.html
@@ -1,10 +1,10 @@
-<div class="container">
+<div class="containerTwo">
   <form autocomplete="off" (ngSubmit)="pesquisar()">
 
   <div class="p-grid">
 
     <div class="p-col-12">
-      <H1>Relacionamentos</H1>
+      <H1>Clientes Cadastrados</H1>
     </div>
 
     <div class="p-col-12 p-fluid">
@@ -14,10 +14,10 @@
     </div>
 
     <div class="p-col-12">
-      <a pButton type="submit" label="Pesquisar"></a>
+      <a pButton type="submit" label="PESQUISAR"></a>
 
       <a pButton  (click)="cadastro()" 
-        label="NOVO RELACIONAMENTO" ></a>
+        label="CADASTRAR CLIENTE" ></a>
     </div>
      <br>
   </div>
@@ -79,15 +79,7 @@
           </p-table>
         </div>
 
-        <div class="p-col-12">
-          <a pButton label="Nova Pessoa"></a>
-        </div>
       </div>
-
-
-
-     
-    
 
 
   </div>
