--- a/src/app/core/navegacao/navegacao.component.html
+++ b/src/app/core/navegacao/navegacao.component.html
@@ -18,10 +18,12 @@
  
       
         <!-- Pendências = lancamentos -->
-        <li class="navbar-menuitem"><a (click)="home()">Página inical</a></li>
-        <li class="navbar-menuitem"><a (click)="pendenciaLista()">Financeiro</a></li>
+        <li class="navbar-menuitem"><a (click)="home()">Página inicial</a></li>
+        <li class="navbar-menuitem"><a (click)="pendenciaLista()">Lançamentos</a></li>
         <!-- <li class="navbar-menuitem"><a (click)="pendenciaCadastro()">Nova pendência</a></li> -->
-        <li class="navbar-menuitem"><a (click)="clienteLista()">Relacionamento</a></li>
+        <li class="navbar-menuitem"><a (click)="clienteLista()">Pessoas</a></li>
+        <li class="navbar-menuitem"><a (click)="empresas()">Empresas</a></li>
+        <li class="navbar-menuitem"><a (click)="empresasCadastro()">Empresas Cadastro</a></li>
         <!-- <li class="navbar-menuitem"><a (click)="clienteCadastro()">Novo cliente</a></li>
         <li class="navbar-menuitem"><a (click)="controleVenda()">Controle de vendas</a></li>
         <li class="navbar-menuitem"><a (click)="novaVenda()">Nova venda</a></li> -->
