--- a/src/app/core/navegacao/navegacao.component.scss
+++ b/src/app/core/navegacao/navegacao.component.scss
@@ -41,9 +41,14 @@
     color: #c0bbb7;
     text-decoration: none;
   }
+
+  .navbar-menuitem:hover{
+    cursor: pointer;
+  }
   
   .navbar-menuitem a:hover {
     color: #fff;
+   
   }
 
   .logo {
