--- a/src/app/dashboard/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard/dashboard.component.html
@@ -1,5 +1,5 @@
 
-<div class="containerHome">
+<div class="containerTwo">
 
  
          
@@ -15,7 +15,7 @@
       </div>
   
       <div class="p-col-12 p-lg-6">
-        <p-panel header="Dados geráis por categoria: ">
+        <p-panel header="Dados gerais por categoria: ">
           <p-chart type="pie" [data]="pieChartData"></p-chart>
         </p-panel>
       </div>
