--- a/src/styles.scss
+++ b/src/styles.scss
@@ -14,9 +14,10 @@ label {
     width: 1170px;
     margin: 0 auto;
   }
-  .containerHome{
+  .containerTwo{
     width: 1000px;
     margin: 0 auto;
+    padding-left: 143px;
     
   }
   .containerHomeVendas{
