--- a/src/app/clientes/pessoa-cadastro/pessoa-cadastro.component.html
+++ b/src/app/clientes/pessoa-cadastro/pessoa-cadastro.component.html
@@ -162,7 +162,7 @@
       
             <div class="p-col-12">
               <button pButton type="submit" label="Salvar"></button>
-              <button pButton type="button" label="Voltar" routerLink="pessoas" class="p-button-info"></button>
+              <button pButton type="button" label="Voltar" (click)="voltar()" class="p-button-info"></button>
               <!-- <a href="javascript:;">Voltar para a pesquisa</a> -->
             </div>
           </div>
