--- a/src/app/empresa/empresas/empresas.component.html
+++ b/src/app/empresa/empresas/empresas.component.html
@@ -1,1 +1,95 @@
-<p>empresas works!</p>
+<div class="containerTwo">
+  <form autocomplete="off" (ngSubmit)="pesquisar()">
+
+    <div class="p-grid">
+
+      <div class="p-col-12">
+        <H1>Empresas Cadastrados</H1>
+      </div>
+
+      <div class="p-col-2 p-fluid">
+        <label>Código: </label>
+        <input pInputText type="text" name="nome" [(ngModel)]="filtro.codigo" />
+      </div>
+
+      <div class="p-col-10 p-fluid">
+        <label>Nome fantasia: </label>
+        <input pInputText type="text" name="nome" [(ngModel)]="filtro.nome" />
+      </div>
+
+
+      <br>
+    </div>
+  </form>
+
+
+
+  <div class="p-grid">
+
+    <div class="p-col-12">
+      <p-table [value]="dados" [paginator]="true" [rows]="2" [responsive]="true" #tabela>
+        <ng-template pTemplate="header">
+          <tr>
+            <th>Código</th>
+            <th>Nome Fantasia</th>
+            <th>Cidade</th>
+            <th>Estado</th>
+            <th>Status</th>
+            <th class="col-acoes-header"></th>
+          </tr>
+        </ng-template>
+
+        <ng-template pTemplate="body" let-empresa>
+          <tr>
+            <td>
+              # {{ empresa.codigo }}
+            </td>
+            <td>
+              {{ empresa.nome }}
+            </td>
+            <td>
+              {{ empresa.endereco.cidade }}
+            </td>
+            <td>
+              {{ empresa.endereco.estado }}
+            </td>
+            <td>
+              <a href="javascript:;" [pTooltip]="empresa.ativo ? 'Desativar' : 'Ativar'" tooltipPosition="top"
+                (click)="status(empresa)">
+                {{ empresa.ativo ? 'ATIVO ' : 'INATIVO' }}
+              </a>
+            </td>
+            <td class="col-acoes">
+              <span class="p-column-title"></span>
+              <button pButton icon="pi pi-pencil" pTooltip="Editar" tooltipPosition="top"
+                (click)="empresaCadastro(empresa.codigo)"></button>
+
+              <button pButton icon="pi pi-trash" pTooltip="Excluir" tooltipPosition="top"
+                (click)="confirmarExclusao(empresa)"></button>
+            </td>
+          </tr>
+        </ng-template>
+
+        <ng-template pTemplate="emptymessage">
+          <tr>
+            <td colspan="5">
+              <h2>Nenhuma pessoa encontrada</h2>
+            </td>
+          </tr>
+        </ng-template>
+
+      </p-table>
+    </div>
+
+    <div class="p-col-3  p-fluid">
+      <button pButton (click)="pesquisar()" label="PESQUISAR"></button>
+
+    </div>
+
+    <div class="p-col-3  p-fluid">
+      <button pButton (click)="cadastro()" label="NOVA PESSOA"></button>
+    </div>
+  </div>
+
+
+</div>
