--- a/src/app/lancamentos/lancamento/lancamentos.component.html
+++ b/src/app/lancamentos/lancamento/lancamentos.component.html
@@ -11,31 +11,36 @@
     </div>
 
     <!-- fluid: ocupar a class -->
-    <div class="p-col-6 p-fluid"> 
+
+    <div class="p-col-2 p-fluid"> 
+        <label>Codigo: </label>
+        <input  pInputText type="text" name="descricao" 
+        [(ngModel)]="filtro.codigo"/>
+    </div>
+ 
+
+    <div class="p-col-5 p-fluid"> 
         <label>Descrição: </label>
         <input  pInputText type="text" name="descricao" 
         [(ngModel)]="filtro.descricao"/>
     </div>
+    
+    
 
-    <div class="p-col-6">
+
+
+ 
+    <div class="p-col-4">
         <label style="display: block">Vencimento: </label>
-        <p-calendar dateFormat="dd/mm/yy" [inputStyle]="{ width: '150px' }"
+        <p-calendar dateFormat="dd/mm/yy" [inputStyle]="{ width: '120px' }"
             name="vencimentoInicio" [(ngModel)]="filtro.dataVencimentoInicio"></p-calendar>
   
         <label> até </label>
-        <p-calendar dateFormat="dd/mm/yy" [inputStyle]="{ width: '150px' }"
+        <p-calendar dateFormat="dd/mm/yy" [inputStyle]="{ width: '120px' }"
         name="vencimentoFim" [(ngModel)]="filtro.dataVencimentoFim"></p-calendar>
+    
+    
     </div>
-
-    <div class="p-col-12">
-        <button pButton type="submit" label="PESQUISAR"></button>
-  
-        <button pButton  (click)="cadastro()" 
-        label="NOVO LANÇAMENTO" ></button>
-    </div>
-        
-     
-  
     
 </div>
 <br>
@@ -46,7 +51,7 @@
 <div class="p-grid">
     <div class="p-col-12">
         
-        <p-table  [value]="lancamentos" [paginator]="true" [rows]="2"
+        <p-table  [value]="dados" [paginator]="true" [rows]="1"
         [responsive]="true" #tabela>
 
         <ng-template pTemplate="caption">
@@ -59,6 +64,7 @@
         </ng-template>
             <ng-template pTemplate="header">
                 <tr>
+                    <th>Cod:</th>
                     <th>Pessoa</th>
                     <th>Descrição</th>
                     <th class="col-data-header">Vencimento</th>
@@ -70,6 +76,7 @@
             <ng-template pTemplate="body" let-lancamento >
                 <!-- *ngIf="lancamento.categoria.codigo === 26" -->
                 <tr  >
+                    <td class="col-acoes">#{{lancamento.codigo}}</td>
                     <td>{{ lancamento.pessoa.nome }}</td>
                     <td>{{ lancamento.descricao }}</td>
                     <td class="col-data-content">{{ lancamento.dataVencimento }}</td>
@@ -93,6 +100,15 @@
                 </tr>
               </ng-template>
         </p-table>
+    </div>
+    <div class="p-col-3  p-fluid">
+        <button pButton (click)="pesquisar()" label="PESQUISAR"></button>
+      
+    </div>
+        
+    <div class="p-col-3  p-fluid">
+        <button pButton  (click)="cadastro()" 
+        label="NOVO LANÇAMENTO" ></button>
     </div>
 </div>
 
