Cadastrando pendencia com ou sem empresa/peesoa

--- a/src/app/clientes/pessoa/pessoa.component.html
+++ b/src/app/clientes/pessoa/pessoa.component.html
@@ -56,7 +56,7 @@
             <td>
               <a href="javascript:;" [pTooltip]="pessoa.ativo ? 'Desativar' : 'Ativar'" tooltipPosition="top"
                 (click)="status(pessoa)">
-                {{ pessoa.ativo ? 'ATIVO' : 'INATIVO' }}
+                {{ pessoa.ativo ? 'INATIVO' : 'ATIVO' }}
               </a>
             </td>
 
