--- a/src/app/empresa/empresas/empresas.component.html
+++ b/src/app/empresa/empresas/empresas.component.html
@@ -56,7 +56,7 @@
             <td>
               <a href="javascript:;" [pTooltip]="empresa.ativo ? 'Desativar' : 'Ativar'" tooltipPosition="top"
                 (click)="status(empresa)">
-                {{ empresa.ativo ? 'ATIVO ' : 'INATIVO' }}
+                {{ empresa.ativo ? 'INATIVO ' : 'ATIVO' }}
               </a>
             </td>
             <td class="col-acoes">
