--- a/src/styles.scss
+++ b/src/styles.scss
@@ -20,6 +20,12 @@ label {
     padding-left: 143px;
     
   }
+  .containerPendencias{
+    width: 1100px;
+    margin: 0 auto;
+    padding-left: 100px;
+    
+  }
   .containerHomeVendas{
     width: 90px;
     //margin: 0 auto;
