--- a/src/app/lancamentos/lancamento/lancamentos.component.html
+++ b/src/app/lancamentos/lancamento/lancamentos.component.html
@@ -1,6 +1,6 @@
 
  
-<div class="containerTwo">
+<div class="containerPendencias">
     <form autocomplete="off" (ngSubmit)="pesquisar()">
 
   
@@ -68,7 +68,7 @@
                     <th>Pessoa</th>
                     <th>Descrição</th>
                     <th class="col-data-header">Vencimento</th>
-                    <th class="col-data-header">Pagamento</th>
+                    <th  class="col-data-header">Pagamento</th>
                     <th class="col-valor-header">Valor</th>
                     <th class="col-acoes-header"></th>
                 </tr>
@@ -80,7 +80,7 @@
                     <td>{{ lancamento.pessoa.nome }}</td>
                     <td>{{ lancamento.descricao }}</td>
                     <td class="col-data-content">{{ lancamento.dataVencimento }}</td>
-                    <td class="col-data-content">{{ lancamento.dataPagamento }}</td>
+                    <td  [hidden]="lancamento.dataPagamento === null"class="col-data-content">{{ lancamento.dataPagamento }}</td>
                     <td class="col-valor" [style.color]="lancamento.tipo === 'DESPESA' ? 'red' : 'blue'">{{ lancamento.valor }}</td>
                     <td class="col-acoes">
                         <button pButton icon="pi pi-pencil"  pTooltip="Editar" tooltipPosition="top"
