Visual da page não encontrada

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -26,6 +26,14 @@ label {
     padding-left: 100px;
     
   }
+
+  .containerVazio{
+    width: 1100px;
+    margin: 0 auto;
+    padding-left: 30%;
+    padding-top: 5%;
+    
+  }
   .containerHomeVendas{
     width: 90px;
     //margin: 0 auto;
