Cadastro e edicão de categoria de pendencia

--- a/src/app/core/navegacao/navegacao.component.html
+++ b/src/app/core/navegacao/navegacao.component.html
@@ -23,6 +23,7 @@
         <!-- <li class="navbar-menuitem"><a (click)="pendenciaCadastro()">Nova pendência</a></li> -->
         <li class="navbar-menuitem"><a (click)="clienteLista()">Pessoas</a></li>
         <li class="navbar-menuitem"><a (click)="empresas()">Empresas</a></li>
+        <li class="navbar-menuitem"><a (click)="categorias()">Categorias</a></li>
         <!-- <li class="navbar-menuitem"><a (click)="empresasCadastro()">Empresas Cadastro</a></li> -->
         <!-- <li class="navbar-menuitem"><a (click)="clienteCadastro()">Novo cliente</a></li>
         <li class="navbar-menuitem"><a (click)="controleVenda()">Controle de vendas</a></li>
