--- a/src/app/categoria/categorias/categorias.component.html
+++ b/src/app/categoria/categorias/categorias.component.html
@@ -18,6 +18,9 @@
         </div>
     </form>
 
+    <p-panel>
+
+   
     <div class="p-grid">
         <div class="p-col-12">
             <p-table [value]="dados" [paginator]="true" [rows]="2" [responsive]="true" #tabela>
@@ -77,7 +80,7 @@
     </div>
 
 
-
+  </p-panel>
 
 
 
