--- a/src/app/clientes/pessoa/pessoa.component.html
+++ b/src/app/clientes/pessoa/pessoa.component.html
@@ -4,7 +4,7 @@
     <div class="p-grid">
 
       <div class="p-col-12">
-        <H1>Clientes Cadastrados</H1>
+        <H1>Pessoas Cadastrados</H1>
       </div>
 
       <div class="p-col-2 p-fluid">
@@ -21,6 +21,8 @@
       <br>
     </div>
   </form>
+
+  <p-panel>
 
 
 
@@ -92,5 +94,5 @@
     </div>
   </div>
 
-
+</p-panel>
 </div>
