--- a/src/app/empresa/empresas/empresas.component.html
+++ b/src/app/empresa/empresas/empresas.component.html
@@ -1,4 +1,4 @@
-<div class="containerTwo">
+<div class="containerPendencias">
   <form autocomplete="off" (ngSubmit)="pesquisar()">
 
     <div class="p-grid">
@@ -22,7 +22,9 @@
     </div>
   </form>
 
+  <p-panel>
 
+ 
 
   <div class="p-grid">
 
@@ -91,5 +93,5 @@
     </div>
   </div>
 
-
+</p-panel>
 </div>
