--- a/src/app/core/navegacao/navegacao.component.html
+++ b/src/app/core/navegacao/navegacao.component.html
@@ -19,7 +19,7 @@
       
         <!-- Pendências = lancamentos -->
         <li class="navbar-menuitem"><a (click)="home()">Página inicial</a></li>
-        <li class="navbar-menuitem"><a (click)="pendenciaLista()">Lançamentos</a></li>
+        <li class="navbar-menuitem"><a (click)="pendenciaLista()">Financeiro</a></li>
         <!-- <li class="navbar-menuitem"><a (click)="pendenciaCadastro()">Nova pendência</a></li> -->
         <li class="navbar-menuitem"><a (click)="clienteLista()">Pessoas</a></li>
         <li class="navbar-menuitem"><a (click)="empresas()">Empresas</a></li>
