--- a/src/app/dashboard/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard/dashboard.component.html
@@ -1,78 +1,95 @@
 
-<div class="containerTwo">
+<div class="containerHome">
 
- 
+  <p-panel >
+
+  
+  <p-tabMenu  [model]="items" [activeItem]="activeItem"></p-tabMenu>
          
     <div class="p-grid">
-      <div class="p-col-12">
-        <h1>Bem-vindo</h1>
-      </div>
+      
+      <br>
 
-
-       <div class="p-col-12 p-lg-5">
-        <img  src="../../../assets/ilustracaohome.svg" width="300px" >
-       </div>
-      <div class="p-col-12 p-lg-6">
-        <p-panel header="Dados gerais por categoria: ">
+       
+      <div class="p-col-12 p-lg-6"*ngIf="mostrarPizza">
+        <p-panel  >
           <p-chart type="pie" [data]="pieChartData"></p-chart>
         </p-panel>
       </div>
-      <div class="p-col-12 p-lg-6"  
-      >
+
+      <div class="p-col-12 p-lg-6" *ngIf="mostrarFaturamento">
         <p-panel style="height: 50px;" header="Balanço do mês, lucro de {{lucro}} reais! ">
           <p-chart type="line" [data]="lineChartData"></p-chart>
         </p-panel>
       </div>
-  
-      
 
 
-     
+      <div class="p-col-12 p-lg-5" *ngIf="mostrarPizza" style="margin-left: auto;">
+        <img  src="../../../assets/pizza.svg"  width="300px" style="margin-top: 58px;" >
+       </div>
+
+       <div class="p-col-12 p-lg-5" *ngIf="mostrarFaturamento" style="margin-left: auto;">
+        <img  src="../../../assets/ilustracaohome.svg"  width="300px" style="margin-top: 58px;" >
+       </div>
+
+
+ 
+
+
+    <div class="p-col-12 ">
+      <p-panel header="Ultimos cadastros financeiros:">
+       
+
    
-      <div class="p-col-12 p-lg-6">
-        <p-panel header="Ultimos cadastros financeiros:">
-         
-  
-      <p-table  [value]="dados" [paginator]="true" [rows]="1"
-        [responsive]="true" #ultimasVendas > 
-            <ng-template pTemplate="header">
-                <tr>
-                    <!-- <th class="col-data-header" > Descrição</th> -->
-                    <th class="col-data-header">Pagamento</th>
-                    <th class="col-valor-header">Tipo</th>
-                    <th class="col-acoes-header"></th>
-                   
-                </tr>
-            </ng-template>
-            <ng-template pTemplate="body" let-lancamento >
-                <tr  >
-                    <!-- <td>{{ lancamento.descricao }}</td> -->
-                    <td class="col-data-content">{{ lancamento.dataPagamento }}</td>
-                    <td class="col-valor" [style.color]="lancamento.tipo === 'DESPESA' ? 'red' : 'blue'">{{ lancamento.tipo }} </td>
-                    <td class="col-acoes">
+    
+    <p-table  [value]="dados" [paginator]="true" [rows]="1"
+    [responsive]="true" #ultimasVendas  > 
+        <ng-template pTemplate="header">
+            <tr>
+                 <th class="col-data-header"  style="text-align: center;">Cod:</th>
+                 <th  class="col-data-header" style="text-align: center;">Descrição</th>
+                 <th class="col-data-header"  style="text-align: center;">Vencimento</th>
+                <th class="col-data-header"  style="text-align: center;">Pagamento</th>
+                <th class="col-valor-header" style="text-align: center;">Tipo</th>
+                <th class="col-acoes-header" style="text-align: center;">Ações</th>
+               
+            </tr>
+        </ng-template>
+        <ng-template pTemplate="body" let-lancamento >
+            <tr  >
+                <!-- <td>{{ lancamento.descricao }}</td> -->
+                <td class="col-acoes" style="text-align: center;" > #{{ lancamento.codigo }}</td>
+                <td  style="text-align: center;">{{ lancamento.descricao }}</td>
+                <td  style="text-align: center;">{{ lancamento.dataVencimento }}</td>
+                <td class="col-data-content" style="text-align: center;">{{ lancamento.dataPagamento }}</td>
+                <td style="text-align: center;" class="col-acoes" [style.color]="lancamento.tipo === 'DESPESA' ? 'red' : 'blue'">{{ lancamento.tipo }} </td>
+                <td class="col-acoes" style="text-align: center;">
+                  <div class="p-d-flex">
+                    <div class="p-mr-2" >
                       <button pButton icon="pi pi-eye"  pTooltip="Editar" tooltipPosition="top"
                       (click)="visualizarVenda(lancamento.codigo)"
                       ></button>
+                    </div>
+                    <div class="p-mr-2">
                       <button pButton icon="pi pi-trash"  pTooltip="Excluir" tooltipPosition="top"
                       (click)="confirmarExclusao(lancamento)"></button>
-                  </td>
-                  </tr>
-            </ng-template>
+                    </div>
+                  </div>
+                  
+                  
+              </td>
+              </tr>
+        </ng-template>
 
-            <ng-template pTemplate="emptymessage">
-                <tr>
-                  <td colspan="5">
-                 <h2>Nenhuma registro</h2>   
-                  </td>
-                </tr>
-              </ng-template>
-        </p-table>
-
-      </p-panel>
-    </div>
-
-
-   
+        <ng-template pTemplate="emptymessage">
+            <tr>
+              <td colspan="5">
+             <h2>Nenhuma registro</h2>   
+              </td>
+            </tr>
+          </ng-template>
+    </p-table>
+  </p-panel>
 
     </div>
 
@@ -117,4 +134,12 @@
 
     </p-dialog>
 
-</div>
+
+
+
+
+
+
+  </div>
+
+</p-panel>
