--- a/src/styles.scss
+++ b/src/styles.scss
@@ -21,10 +21,16 @@ label {
     
   }
   .containerPendencias{
-    width: 1100px;
+    width: 1000px;
+    height: auto; 
     margin: 0 auto;
     padding-left: 100px;
     
+  }
+  .containerHome{
+    width: 1300px;
+    margin: 0 auto;
+    padding-left: 150px;
   }
 
   .containerVazio{
@@ -37,6 +43,13 @@ label {
   .containerHomeVendas{
     width: 90px;
     //margin: 0 auto;
+  }
+
+  .containerCadastro{
+    width: 1200px;
+    margin: 0 auto;
+    padding-left: 150px;
+    
   }
 }
 
