--- a/src/app/categoria/categorias/categorias.component.html
+++ b/src/app/categoria/categorias/categorias.component.html
@@ -11,7 +11,7 @@
               </div>
         
               <div class="p-col-10 p-fluid">
-                <label>Nome fantasia: </label>
+                <label>Nome: </label>
                 <input pInputText type="text" name="nome" [(ngModel)]="filtro.name" />
               </div>
 
@@ -27,7 +27,7 @@
                 <ng-template pTemplate="header">
                     <tr>
                       <th>Código</th>
-                      <th>Nome Fantasia</th>
+                      <th>Nome</th>
                       <th class="col-acoes-header"></th>
                     </tr>
                   </ng-template>
