--- a/src/app/lancamentos/lancamento/lancamentos.component.html
+++ b/src/app/lancamentos/lancamento/lancamentos.component.html
@@ -7,7 +7,7 @@
 <div class="p-grid">
    
     <div class="p-col-12">
-        <H1>Registros financeiros</H1>
+        <H1>Cadastros Financeiros</H1>
     </div>
 
     <!-- fluid: ocupar a class -->
@@ -108,7 +108,7 @@
         
     <div class="p-col-3  p-fluid">
         <button pButton  (click)="cadastro()" 
-        label="NOVO LANÇAMENTO" ></button>
+        label="NOVO CADASTROS" ></button>
     </div>
 </div>
 
