--- a/src/app/clientes/pessoa/pessoa.component.html
+++ b/src/app/clientes/pessoa/pessoa.component.html
@@ -4,7 +4,7 @@
     <div class="p-grid">
 
       <div class="p-col-12">
-        <H1>Pessoas Cadastrados</H1>
+        <H1>Pessoas Cadastradas</H1>
       </div>
 
       <div class="p-col-2 p-fluid">
