--- a/src/app/empresa/empresas/empresas.component.html
+++ b/src/app/empresa/empresas/empresas.component.html
@@ -4,7 +4,7 @@
     <div class="p-grid">
 
       <div class="p-col-12">
-        <H1>Empresas Cadastrados</H1>
+        <H1>Empresas Cadastradas</H1>
       </div>
 
       <div class="p-col-2 p-fluid">
