--- a/src/app/lancamentos/lancamentos-cadastro/lancamentos-cadastro.component.html
+++ b/src/app/lancamentos/lancamentos-cadastro/lancamentos-cadastro.component.html
@@ -7,11 +7,11 @@
 
 
         <div class="p-col-12">
-            <H1>{{ editando ? 'Edição de' : 'Novo' }} Registros</H1>
+            <H1>{{ editando ? 'Edição de' : 'Novo' }} Cadastro Financeiro </H1>
         </div>
 
         <p-card>
-
+ 
         <div class="p-grid">
 
             <div class="p-col-12" >
